--- a/public/style.scss
+++ b/public/style.scss
@@ -114,7 +114,6 @@ $secondary-color: #e67e22;
 }
 
 .results {
-  margin-top: 20px;
   padding: 20px;
   background-color: #f2f2f2;
 
@@ -132,24 +131,26 @@ $secondary-color: #e67e22;
   font-size: 2rem;
   border: solid 1px white;
   color: white;
+  padding: 1rem;
 
   @media (max-width: 768px) {
     font-size: 1.5rem;
-    border: solid 1px white;
+    border: solid 1px black;
     color: white;
+    
   }
 }
 
 .results .questions {
   margin-bottom: 10px;
   font-size: 2rem;
-  border: solid 1px black;
-  color: black;
+  
+  color: white;
 
   @media (max-width: 768px) {
     font-size: 1.5rem;
-    border: solid 1px black;
-    color: black;
+    
+  
   }
 }
 
@@ -165,7 +166,7 @@ $secondary-color: #e67e22;
 .results div {
   margin-bottom: 20px;
   padding: 10px;
-  background-color: #dfc7d4;
+  background-color: rgba(212, 142, 206, 0.5);
   border: 1px solid #550505;
   border-radius: 4px;
   color: black;
@@ -174,6 +175,7 @@ $secondary-color: #e67e22;
 .results div p {
   margin-bottom: 5px;
   font-size: 16px;
+
 
   @media (max-width: 768px) {
     font-size: 14px;
@@ -215,7 +217,6 @@ $secondary-color: #e67e22;
 
   @media (max-width: 768px) {
     font-size: 1.5rem;
-    border: solid .1rem red;
     background-color: #90d896;
     text-align: right;
   }
@@ -227,14 +228,19 @@ $secondary-color: #e67e22;
   font-size: 3rem;
 
   @media (max-width: 768px) {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
 .question-container input[type="radio"] {
-  margin-right: 5px;
+  margin: 1rem 0.5rem 1rem 1rem;
   width: 1rem;
   height: 1rem;
+
+  @media (max-width: 768px) {
+    width: 1rem;
+    height: 1rem;
+  }
   
 }
 
