--- a/public/style.css
+++ b/public/style.css
@@ -1,267 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap");
-* {
-  margin: 0;
-  padding: 0;
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
 }
 
-.container {
-  max-width: 100vw;
-  font-family: Arial, sans-serif;
+*{
+  text-transform: capitalize;
 }
-
-.form-group {
-  background-image: url("./images/1.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: left;
-  padding: 20px;
-  box-sizing: border-box;
-  flex-flow: column;
-}
-.form-group h1 {
-  font-size: 4rem;
-  color: white;
-  margin-bottom: 1rem;
-}
-@media (max-width: 1200px) {
-  .form-group h1 {
-    font-size: 4rem;
-  }
-}
-@media (max-width: 768px) {
-  .form-group h1 {
-    font-size: 2rem;
-  }
-}
-@media (max-width: 576px) {
-  .form-group h1 {
-    font-size: 1.5rem;
-  }
-}
-@media (max-width: 576px) {
-  .form-group {
-    height: 92vh;
-  }
-}
-.form-group .error {
-  border: 5px solid red;
-}
-.form-group .error-text {
-  color: red;
-  background-color: white;
-  width: 30%;
-  font-size: 1.5rem;
-  border: solid 3px red;
-}
-
-.form-group input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  color: #3498db;
-  background-color: rgba(18, 68, 85, 0.5);
-  margin: 1rem;
-  width: 90%;
-}
-.form-group input:focus {
-  border: 1px solid #3498db;
-  background-color: white;
-}
-.form-group input::-moz-placeholder {
-  color: white;
-  font-size: 1.5rem;
-}
-.form-group input::placeholder {
-  color: white;
-  font-size: 1.5rem;
-}
-@media (max-width: 768px) {
-  .form-group input {
-    font-size: 1rem;
-    width: 80%;
-  }
-}
-
-.form-group button {
-  padding: 10px;
-  background-color: #3498db;
-  color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  width: 90%;
-  margin: 1rem;
-}
-.form-group button:hover {
-  background-color: #217dbb;
-}
-@media (max-width: 768px) {
-  .form-group button {
-    font-size: 14px;
-  }
-}
-
-.results {
-  padding: 20px;
-  background-color: #f2f2f2;
-  background-image: url("./images/1.jpg");
-  background-size: cover;
-  background-position: center;
-}
-@media (max-width: 576px) {
-  .results {
-    padding: 15px;
-  }
-}
-
-.results p {
-  margin-bottom: 10px;
-  font-size: 2rem;
-  border: solid 1px white;
-  color: white;
-  padding: 1rem;
-}
-@media (max-width: 768px) {
-  .results p {
-    font-size: 1.5rem;
-    border: solid 1px black;
-    color: white;
-  }
-}
-
-.results .questions {
-  margin-bottom: 10px;
-  font-size: 2rem;
-  color: white;
-}
-@media (max-width: 768px) {
-  .results .questions {
-    font-size: 1.5rem;
-  }
-}
-
-.results h3 {
-  margin-bottom: 10px;
-  font-size: 18px;
-}
-@media (max-width: 768px) {
-  .results h3 {
-    font-size: 16px;
-  }
-}
-
-.results div {
-  margin-bottom: 20px;
-  padding: 10px;
-  background-color: rgba(237, 227, 236, 0.5);
-  border: 1px solid #550505;
-  border-radius: 4px;
-  color: black;
-}
-
-.results div p {
-  margin-bottom: 5px;
-  font-size: 16px;
-}
-@media (max-width: 768px) {
-  .results div p {
-    font-size: 14px;
-  }
-}
-
-.results div span {
-  font-size: 18px;
-}
-@media (max-width: 768px) {
-  .results div span {
-    font-size: 16px;
-  }
-}
-
-.loading {
-  margin-top: 20px;
-  font-weight: bold;
-  text-align: center;
-  font-size: 16px;
-}
-@media (max-width: 768px) {
-  .loading {
-    font-size: 14px;
-  }
-}
-
-.question-container {
-  margin: 20px;
-  text-align: justify;
-}
-@media (max-width: 576px) {
-  .question-container {
-    margin: 15px;
-  }
-}
-.question-container .options {
-  display: inline-block;
-}
-
-.question-container p {
-  margin-bottom: 10px;
-  font-weight: bold;
-  font-size: 4rem;
-}
-@media (max-width: 768px) {
-  .question-container p {
-    font-size: 2rem;
-    background-color: #90d896;
-    text-align: right;
-  }
-}
-
-.question-container label {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 3rem;
-  display: inline;
-}
-@media (max-width: 768px) {
-  .question-container label {
-    font-size: 1.5rem;
-  }
-}
-
-.question-container input[type=radio] {
-  margin: 1rem 0.5rem 1rem 1rem;
-  width: 1rem;
-  height: 1rem;
-}
-@media (max-width: 768px) {
-  .question-container input[type=radio] {
-    width: 1rem;
-    height: 1rem;
-  }
-}
-
-.question-container button {
-  margin-top: 10px;
-  font-size: 16px;
-  width: 70%;
-  height: 2rem;
-  cursor: pointer;
-  color: black;
-  background-color: #3498db;
-}
-.question-container button:hover {
-  background-color: #550505;
-  color: white;
-}
-@media (max-width: 768px) {
-  .question-container button {
-    font-size: 1.5rem;
-  }
-}/*# sourceMappingURL=style.css.map */
